[package]
name = "dj-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", features = ["glow", "persistence"] }
egui = "0.27.2"
serde_json = "1.0"
blake3 = "1.5"
rustfft = "6.2.0"
egui_plot = "0.27.2"
serde = { version = "1.0", features = ["derive"] }
rodio = "0.17.3"
symphonia = { version = "0.5.4", features = ["aac", "alac", "flac", "mp3", "vorbis", "isomp4", "wav", "caf", "pcm"] }
image = "0.25.5"
lofty = "0.17.1"
dirs = "5.0.1"
webbrowser = "0.8.15"
cpal = "0.15.3"